Cambio de version del proyecto a Java 1.8